# LOB

./: .gitignore  CMakeLists.txt  README.md  benchmark_results.md
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  orderbook_bench.cpp
src/: CMakeLists.txt  ITCH50.hpp  ITCHParser.hpp  MmapReader.hpp  NormalizedMsg.hpp  OrderBook.cpp  OrderBook.hpp  Protocol.hpp  SPSCQueue.hpp  main.cpp
tests/: CMakeLists.txt  orderbook_test.cpp
